--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,16 @@
 {
+  "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
       {
-        "src": "backend/index.js",
+        "src": "index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/backend/api/$1"
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
